@@ -17,9 +17,12 @@ SoftPWMSetPercent	KEYWORD2
 SoftPWMSetFadeTime	KEYWORD2
 SoftPWMBegin	KEYWORD2
 SoftPWMEnd	KEYWORD2
+SoftPWMSetPolarity	KEYWORD2
 
 #######################################
 # Constants (LITERAL1)
 #######################################
 
 ALL	LITERAL1
+SOFTPWM_NORMAL	LITERAL1
+SOFTPWM_INVERTED	LITERAL1
